--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,81 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login/Signup</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/login.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hotel Login</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-image: url('img/login bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .login-container {
+      background: rgba(255, 255, 255, 0.95);
+      padding: 40px 30px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .logo-wrapper {
+      margin-bottom: 10px;
+    }
+
+    .login-logo {
+      width: 180px;
+      display: block;
+      margin: 0 auto;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+      width: 90%;
+      padding: 12px 15px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    button {
+      width: 90%;
+      padding: 12px;
+      margin-top: 10px;
+      background-color: #0066cc;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005bb5;
+    }
+
+    .footer-link {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+
+    .footer-link a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    .footer-link a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-  <body>
-    <!-- Navbar Section -->
-    <nav class="navbar">
-        <div class="navbar__container">
-          <a href="index.html" id="navbar__logo">
-            <img
-              src="img/sh icon.png"
-              alt="Sapphire Hotel Logo"
-              class="navbar__logo-img"
-            />
-            Sapphire Hotel
-          </a>
-          <div class="navbar__toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-          <ul class="navbar__menu">
-            <li class="navbar__item">
-              <a href="index.html" class="navbar__links">Home</a>
-            </li>
-            <li class="navbar__item">
-              <a href="services.html" class="navbar__links">Services</a>
-            </li>
-            <li class="navbar__item">
-              <a href="rooms.html" class="navbar__links">Rooms</a>
-            </li>
-            <li class="navbar__item">
-              <a href="contact.html" class="navbar__links">Contact</a>
-            </li>
-            <li class="navbar__item">
-              <a href="profile.html" class="navbar__links">Profile</a>
-            </li>
-            <li class="navbar__btn">
-              <a href="login.html" class="button">Login/Sign-up</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-  
+<body>
+
   <div class="login-container">
     <div class="logo-wrapper">
-      <img src="img/sh icon.png" alt="Sapphire Hotel" class="login-logo" />
-        <h1>Sapphire Hotel</h1>
+      <img src="img/logo.jpg" alt="GrandView Hotel Logo" class="login-logo" />
     </div>
-    <form action="login" method="POST">
+    <form action="/login" method="POST">
       <input type="text" name="username" placeholder="Username or Email" required />
       <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
     <div class="footer-link">
-      Don't have an account? <a href="sign-up.html">Register here</a>
+      Don't have an account? <a href="register.html">Register here</a>
     </div>
   </div>
-
-  
-    <!-- Footer Section -->
-    <footer class="footer">
-        <div class="container">
-          <p>© 2025 Sapphire Hotel. All rights reserved.</p>
-          <div class="social-links">
-            <a href="#"><img src="img/facebook.png" alt="Facebook" /></a>
-            <a href="#"><img src="img/twitter.png" alt="Twitter" /></a>
-            <a href="#"><img src="img/instagram.png" alt="Instagram" /></a>
-          </div>
-        </div>
-      </footer>
-
-      <script src="js/app.js"></script>
-  </body>
+</body>
 </html>
