--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -92,7 +92,7 @@
                   <option value="" disabled selected>Select Room Type</option>
                   <option value="standard">Standard</option>
                   <option value="deluxe">Deluxe</option>
-                  <option value="suite">Suite</option>
+                  <option value="Exclusive">Exclusive</option>
                 </select>
               </div>
               <div class="col-lg-6">
@@ -102,7 +102,7 @@
                   id="numberOfGuests"
                   class="form-control"
                   min="1"
-                  max="10"
+                  max="5"
                   required
                 />
               </div>
