--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/booking.css" />
     <link rel="stylesheet" href="css/room.css" />
-    <!-- Date Picker Library -->
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Date Picker (Flatpickr) -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
@@ -67,36 +68,38 @@
             <!-- Booking Form -->
             <div class="row gy-4">
               <div class="col-lg-6">
-                <label for="checkInDate">Check-In Date:</label>
+                <label for="checkInDate" class="form-label">Check-In Date:</label>
                 <input
                   type="text"
                   id="checkInDate"
                   class="form-control"
                   placeholder="Select Check-In Date"
+                  readonly
                   required
                 />
               </div>
               <div class="col-lg-6">
-                <label for="checkOutDate">Check-Out Date:</label>
+                <label for="checkOutDate" class="form-label">Check-Out Date:</label>
                 <input
                   type="text"
                   id="checkOutDate"
                   class="form-control"
                   placeholder="Select Check-Out Date"
+                  readonly
                   required
                 />
               </div>
               <div class="col-lg-6">
-                <label for="roomType">Room Type:</label>
+                <label for="roomType" class="form-label">Room Type:</label>
                 <select id="roomType" class="form-select" required>
                   <option value="" disabled selected>Select Room Type</option>
                   <option value="standard">Standard</option>
                   <option value="deluxe">Deluxe</option>
-                  <option value="Exclusive">Exclusive</option>
+                  <option value="Exclusive">Exclusive Suite</option>
                 </select>
               </div>
               <div class="col-lg-6">
-                <label for="numberOfGuests">Number of Guests:</label>
+                <label for="numberOfGuests" class="form-label">Number of Guests:</label>
                 <input
                   type="number"
                   id="numberOfGuests"
@@ -115,7 +118,7 @@
               <div id="summaryGuests" class="mt-2"></div>
               <div id="summaryNights" class="mt-2"></div>
               <div id="summaryTotalAmount" class="mt-2"></div>
-              <button type="submit" class="btn btn-primary" id="confirmButton">
+              <button type="submit" class="btn btn-primary mt-3" id="confirmButton">
                 Confirm Booking
               </button>
             </div>
@@ -125,7 +128,7 @@
     </div>
 
     <!-- Payment Overlay -->
-    <div id="paymentOverlay" class="overlay">
+    <div id="paymentOverlay" class="overlay d-none">
       <div class="payment-modal">
         <span class="close-btn">&times;</span>
         <h2>Complete Your Payment</h2>
@@ -177,8 +180,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="js/booking.js"></script>
-
-    <script src="js/app.js"></script>
-    <script src="js/room.js"></script>
   </body>
 </html>
