--- a/frontend/services.html
+++ b/frontend/services.html
@@ -157,6 +157,43 @@
               </ul>
             </div>
           </div>
+          <!-- Fitness Center -->
+<div class="service-card">
+  <div class="service-icon">
+    <i class="fas fa-dumbbell"></i>
+  </div>
+  <div class="service-content">
+    <h3>24/7 Fitness Center</h3>
+    <p>
+      Maintain your wellness routine with our fully-equipped facility:
+    </p>
+    <ul class="service-features">
+      <li><i class="fas fa-heartbeat"></i> Cardio machines</li>
+      <li><i class="fas fa-weight"></i> Strength training equipment</li>
+      <li><i class="fas fa-yoga"></i> Yoga/Pilates studio</li>
+      <li><i class="fas fa-user-tie"></i> Personal training sessions</li>
+    </ul>
+  </div>
+</div>
+
+<!-- Concierge Services -->
+<div class="service-card">
+  <div class="service-icon">
+    <i class="fas fa-concierge-bell"></i>
+  </div>
+  <div class="service-content">
+    <h3>Personal Concierge</h3>
+    <p>
+      Let our dedicated team enhance your stay with:
+    </p>
+    <ul class="service-features">
+      <li><i class="fas fa-globe-americas"></i> Tour bookings & recommendations</li>
+      <li><i class="fas fa-car-side"></i> Transportation arrangements</li>
+      <li><i class="fas fa-utensils"></i> Exclusive restaurant reservations</li>
+      <li><i class="fas fa-calendar-alt"></i> Event planning services</li>
+    </ul>
+  </div>
+</div>
         </div>
       </div>
     </section>
