--- a/frontend/material-dashboard-master/pages/billing.html
+++ b/frontend/material-dashboard-master/pages/billing.html
@@ -418,7 +418,7 @@
                         <h6 class="text-center mb-0">Salary</h6>
                         <span class="text-xs">Belong Interactive</span>
                         <hr class="horizontal dark my-3" />
-                        <h5 class="mb-0">+$2000</h5>
+                        <h5 class="mb-0">+₱2000</h5>
                       </div>
                     </div>
                   </div>
@@ -437,7 +437,7 @@
                         <h6 class="text-center mb-0">Paypal</h6>
                         <span class="text-xs">Freelance Payment</span>
                         <hr class="horizontal dark my-3" />
-                        <h5 class="mb-0">$455.00</h5>
+                        <h5 class="mb-0">.00</h5>
                       </div>
                     </div>
                   </div>
@@ -534,7 +534,7 @@
                       <span class="text-xs">#MS-415646</span>
                     </div>
                     <div class="d-flex align-items-center text-sm">
-                      $180
+                      ₱11,800
                       <button
                         class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"
                       >
@@ -556,7 +556,7 @@
                       <span class="text-xs">#RV-126749</span>
                     </div>
                     <div class="d-flex align-items-center text-sm">
-                      $250
+                      ₱2500
                       <button
                         class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"
                       >
@@ -578,7 +578,7 @@
                       <span class="text-xs">#FB-212562</span>
                     </div>
                     <div class="d-flex align-items-center text-sm">
-                      $560
+                      ₱5600
                       <button
                         class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"
                       >
@@ -600,7 +600,7 @@
                       <span class="text-xs">#QW-103578</span>
                     </div>
                     <div class="d-flex align-items-center text-sm">
-                      $120
+                      ₱11,200
                       <button
                         class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"
                       >
@@ -622,7 +622,7 @@
                       <span class="text-xs">#AR-803481</span>
                     </div>
                     <div class="d-flex align-items-center text-sm">
-                      $300
+                      ₱3000
                       <button
                         class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"
                       >
@@ -810,14 +810,14 @@
                         >
                       </button>
                       <div class="d-flex flex-column">
-                        <h6 class="mb-1 text-dark text-sm">Netflix</h6>
+                        <h6 class="mb-1 text-dark text-sm">Adriane</h6>
                         <span class="text-xs">27 March 2020, at 12:30 PM</span>
                       </div>
                     </div>
                     <div
                       class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold"
                     >
-                      - $ 2,500
+                      + ₱ 2,500
                     </div>
                   </li>
                   <li
@@ -832,14 +832,14 @@
                         >
                       </button>
                       <div class="d-flex flex-column">
-                        <h6 class="mb-1 text-dark text-sm">Apple</h6>
+                        <h6 class="mb-1 text-dark text-sm">Maria</h6>
                         <span class="text-xs">27 March 2020, at 04:30 AM</span>
                       </div>
                     </div>
                     <div
                       class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold"
                     >
-                      + $ 2,000
+                      + ₱ 6,000
                     </div>
                   </li>
                 </ul>
@@ -861,14 +861,14 @@
                         >
                       </button>
                       <div class="d-flex flex-column">
-                        <h6 class="mb-1 text-dark text-sm">Stripe</h6>
+                        <h6 class="mb-1 text-dark text-sm">John Paul</h6>
                         <span class="text-xs">26 March 2020, at 13:45 PM</span>
                       </div>
                     </div>
                     <div
                       class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold"
                     >
-                      + $ 750
+                      + ₱ 3,500
                     </div>
                   </li>
                   <li
@@ -883,14 +883,14 @@
                         >
                       </button>
                       <div class="d-flex flex-column">
-                        <h6 class="mb-1 text-dark text-sm">HubSpot</h6>
+                        <h6 class="mb-1 text-dark text-sm">Delia</h6>
                         <span class="text-xs">26 March 2020, at 12:30 PM</span>
                       </div>
                     </div>
                     <div
                       class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold"
                     >
-                      + $ 1,000
+                      + ₱ 9,000
                     </div>
                   </li>
                   <li
@@ -912,7 +912,7 @@
                     <div
                       class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold"
                     >
-                      + $ 2,500
+                      + ₱ Pia
                     </div>
                   </li>
                   <li
