--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -22,7 +22,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html" id="navbar__logo">
+        <a href="index.php" id="navbar__logo">
           <img
             src="img/sh icon.png"
             alt="Sapphire Hotel Logo"
@@ -37,7 +37,7 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html" class="navbar__links">Home</a>
+            <a href="index.php" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
             <a href="services.html" class="navbar__links">Services</a>
