--- a/frontend/services.html
+++ b/frontend/services.html
@@ -17,7 +17,7 @@
     <!-- Navbar (consistent with other pages) -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html" id="navbar__logo">
+        <a href="index.php" id="navbar__logo">
           <img
             src="img/sh icon.png"
             alt="Sapphire Hotel Logo"
@@ -32,7 +32,7 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html" class="navbar__links">Home</a>
+            <a href="index.php" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
             <a href="services.html" class="navbar__links active">Services</a>
@@ -53,18 +53,21 @@
       </div>
     </nav>
 
+    
     <!-- Hero Banner -->
-    <section class="services-hero">
-      <div class="container">
-        <div class="hero-content">
-          <h1>Our Exceptional Services</h1>
-          <p>
-            Experience unparalleled comfort and luxury with Sapphire Hotel's
-            premium amenities
-          </p>
-        </div>
-      </div>
-    </section>
+<section class="main" style="background-image: url('img/ser.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 50vh; display: flex; align-items: center; justify-content: center; color: white;">
+
+  <div class="container">
+    <div class="hero-content">
+      <h1>Our Exceptional Services</h1>
+      <p>
+        Experience unparalleled comfort and luxury with Sapphire Hotel's
+        premium amenities.
+      </p>
+    </div>
+  </div>
+</section>
+
 
     <!-- Services Grid -->
     <section class="services-grid">
