--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -95,7 +95,7 @@
           <div class="info-item">
             <i class="bi bi-clock-fill info-icon"></i>
             <h3>Operating Hours</h3>
-            <p>Reception: 7 AM - 11 PM (Daily)</p>
+            <p>Reception: 24 hours </p>
           </div>
         </div>
       </div>
