--- a/frontend/material-dashboard-master/pages/notifications.html
+++ b/frontend/material-dashboard-master/pages/notifications.html
@@ -71,13 +71,13 @@
           target="_blank"
         >
           <img
-            src="../assets/img/logo-ct-dark.png"
+            src="../assets/img/logo.jpg"
             class="navbar-brand-img"
             width="26"
             height="26"
             alt="main_logo"
           />
-          <span class="ms-1 text-sm text-dark">Creative Tim</span>
+          <span class="ms-1 text-sm text-dark">Sapphire Hotel</span>
         </a>
       </div>
       <hr class="horizontal dark mt-0 mb-2" />
