--- a/frontend/material-dashboard-master/pages/billing.html
+++ b/frontend/material-dashboard-master/pages/billing.html
@@ -26,7 +26,7 @@
       href="../assets/img/apple-icon.png"
     />
     <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
-    <title>Material Dashboard 3 by Creative Tim</title>
+    <title>Material Dashboard 3 by Sapphire Hotel</title>
     <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
@@ -71,13 +71,13 @@
           target="_blank"
         >
           <img
-            src="../assets/img/logo-ct-dark.png"
+            src="../assets/img/logo.jpg"
             class="navbar-brand-img"
-            width="26"
-            height="26"
+            width="45"
+            height="45"
             alt="main_logo"
           />
-          <span class="ms-1 text-sm text-dark">Creative Tim</span>
+          <span class="ms-1 text-sm text-dark">Sapphire Hotel</span>
         </a>
       </div>
       <hr class="horizontal dark mt-0 mb-2" />
