--- a/frontend/material-dashboard-master/pages/profile.html
+++ b/frontend/material-dashboard-master/pages/profile.html
@@ -26,8 +26,8 @@
       sizes="76x76"
       href="../assets/img/apple-icon.png"
     />
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
-    <title>Material Dashboard 3 by Creative Tim</title>
+    <link rel="icon" type="image/png" href="../assets/img/logos/logo.jpg" />
+    <title>Sapphire Hotel Admin</title>
     <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
@@ -72,13 +72,13 @@
           target="_blank"
         >
           <img
-            src="../assets/img/logo-ct-dark.png"
+            src="../assets/img/logos/sh icon.png"
             class="navbar-brand-img"
             width="26"
             height="26"
             alt="main_logo"
           />
-          <span class="ms-1 text-sm text-dark">Creative Tim</span>
+          <span class="ms-1 text-sm text-dark">Sapphire Hotel</span>
         </a>
       </div>
       <hr class="horizontal dark mt-0 mb-2" />
@@ -169,25 +169,6 @@
             <ul
               class="navbar-nav d-flex align-items-center justify-content-end"
             >
-              <li class="nav-item d-flex align-items-center">
-                <a
-                  class="btn btn-outline-primary btn-sm mb-0 me-3"
-                  target="_blank"
-                  href="https://www.creative-tim.com/builder?ref=navbar-material-dashboard"
-                  >Online Builder</a
-                >
-              </li>
-              <li class="mt-1">
-                <a
-                  class="github-button"
-                  href="https://github.com/creativetimofficial/material-dashboard"
-                  data-icon="octicon-star"
-                  data-size="large"
-                  data-show-count="true"
-                  aria-label="Star creativetimofficial/material-dashboard on GitHub"
-                  >Star</a
-                >
-              </li>
               <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
                 <a
                   href="javascript:;"
