--- a/frontend/material-dashboard-master/pages/tables.html
+++ b/frontend/material-dashboard-master/pages/tables.html
@@ -71,14 +71,10 @@
           target="_blank"
         >
           <img
-<<<<<<< HEAD
             src="../assets/img/logos/sh icon.png"
-=======
-            src="../assets/img/logo.jpg"
->>>>>>> 1cf0970cd46a3b55729ec7929e6b4fc3fe9cbb83
             class="navbar-brand-img"
-            width="45"
-            height="45"
+            width="26"
+            height="26"
             alt="main_logo"
           />
           <span class="ms-1 text-sm text-dark">Sapphire Hotel</span>
@@ -399,9 +395,7 @@
                         </td>
                         <td>
                           <p class="text-xs font-weight-bold mb-0">Tourist</p>
-                          <p class="text-xs text-secondary mb-0">
-                            
-                          </p>
+                          <p class="text-xs text-secondary mb-0"></p>
                         </td>
                         <td class="align-middle text-center text-sm">
                           <span class="badge badge-sm bg-gradient-success"
@@ -662,11 +656,6 @@
             </div>
           </div>
         </div>
-<<<<<<< HEAD
-
-=======
-        
->>>>>>> 1cf0970cd46a3b55729ec7929e6b4fc3fe9cbb83
         <footer class="footer py-4">
           <div class="container-fluid">
             <div class="row align-items-center justify-content-lg-between">
@@ -846,39 +835,6 @@
             </div>
           </div>
           <hr class="horizontal dark my-sm-4" />
-          <a
-            class="btn bg-gradient-info w-100"
-            href="https://www.creative-tim.com/product/material-dashboard-pro"
-            >Free Download</a
-          >
-
-          <div class="w-100 text-center">
-            <a
-              class="github-button"
-              href="https://github.com/creativetimofficial/material-dashboard"
-              data-icon="octicon-star"
-              data-size="large"
-              data-show-count="true"
-              aria-label="Star creativetimofficial/material-dashboard on GitHub"
-              >Star</a
-            >
-            <h6 class="mt-3">Thank you for sharing!</h6>
-            <a
-              href="https://twitter.com/intent/tweet?text=Check%20Material%20UI%20Dashboard%20made%20by%20%40CreativeTim%20%23webdesign%20%23dashboard%20%23bootstrap5&amp;url=https%3A%2F%2Fwww.creative-tim.com%2Fproduct%2Fsoft-ui-dashboard"
-              class="btn btn-dark mb-0 me-2"
-              target="_blank"
-            >
-              <i class="fab fa-twitter me-1" aria-hidden="true"></i> Tweet
-            </a>
-            <a
-              href="https://www.facebook.com/sharer/sharer.php?u=https://www.creative-tim.com/product/material-dashboard"
-              class="btn btn-dark mb-0 me-2"
-              target="_blank"
-            >
-              <i class="fab fa-facebook-square me-1" aria-hidden="true"></i>
-              Share
-            </a>
-          </div>
         </div>
       </div>
     </div>
