--- a/frontend/material-dashboard-master/pages/tables.html
+++ b/frontend/material-dashboard-master/pages/tables.html
@@ -352,22 +352,27 @@
                         <th
                           class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
                         >
-                          Profile
+                          Name
                         </th>
                         <th
                           class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"
                         >
-                          Function
+                          Date
                         </th>
                         <th
                           class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
                         >
-                          Status
+                          Check-In
                         </th>
                         <th
                           class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
                         >
-                          Employed
+                          check-out
+                        </th>
+                        <th
+                          class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"
+                        >
+                          Room no.
                         </th>
                         <th class="text-secondary opacity-7"></th>
                       </tr>
@@ -667,14 +672,13 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  , made with <i class="fa fa-heart"></i> by
+                  , made<i class="fa fa-heart"></i> by
                   <a
                     href="https://www.creative-tim.com"
                     class="font-weight-bold"
                     target="_blank"
                     >Sapphire Hotel</a
                   >
-                  for a better web.
                 </div>
               </div>
               <div class="col-lg-6">
@@ -686,7 +690,7 @@
                       href="https://www.creative-tim.com"
                       class="nav-link text-muted"
                       target="_blank"
-                      >Creative Tim</a
+                      >Sapphire Hotel</a
                     >
                   </li>
                   <li class="nav-item">
