--- a/frontend/material-dashboard-master/pages/notifications.html
+++ b/frontend/material-dashboard-master/pages/notifications.html
@@ -661,14 +661,13 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  , made with <i class="fa fa-heart"></i> by
+                  , made <i class="fa fa-heart"></i> by
                   <a
                     href="https://www.creative-tim.com"
                     class="font-weight-bold"
                     target="_blank"
-                    >Creative Tim</a
+                    >Sapphire Hotel</a
                   >
-                  for a better web.
                 </div>
               </div>
               <div class="col-lg-6">
@@ -680,7 +679,7 @@
                       href="https://www.creative-tim.com"
                       class="nav-link text-muted"
                       target="_blank"
-                      >Creative Tim</a
+                      >Sapphire Hotel</a
                     >
                   </li>
                   <li class="nav-item">
