--- a/frontend/material-dashboard-master/pages/sign-in.html
+++ b/frontend/material-dashboard-master/pages/sign-in.html
@@ -222,14 +222,13 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  , made with <i class="fa fa-heart" aria-hidden="true"></i> by
+                  , made <i class="fa fa-heart" aria-hidden="true"></i> by
                   <a
                     href="https://www.creative-tim.com"
                     class="font-weight-bold text-white"
                     target="_blank"
-                    >Creative Tim</a
+                    >Sapphire Hotel</a
                   >
-                  for a better web.
                 </div>
               </div>
               <div class="col-12 col-md-6">
@@ -241,7 +240,7 @@
                       href="https://www.creative-tim.com"
                       class="nav-link text-white"
                       target="_blank"
-                      >Creative Tim</a
+                      >Sapphire Hotel</a
                     >
                   </li>
                   <li class="nav-item">
